--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "Software Engineer Test",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "test": "mocha spec/*.js",
     "after-30-days": "node src/coTest.js"
   },
@@ -14,8 +16,13 @@
   "keywords": [],
   "author": "Guarnic",
   "license": "MIT",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "nodemon": "^2.0.4"
   }
 }
