--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sinon": "^9.0.3"
   }
 }
