--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "antd": "^4.6.5",
-    "axios": "^0.20.0",
+    "axios": ">=0.21.2",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
